--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="addNotice">ADD</div>
+    <div class="removeNotice hide">DEL</div>
     <script src="script.js"></script>
 </body>
 </html>
