--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="addNotice">ADD</div>
-    <div class="removeNotice hide">DEL</div>
+    <!-- <div class="container"> -->
+        <div class="noticeWrapper"></div>
+        <div class="addNotice">ADD</div>
+        <div class="removeNotice hide">DEL</div>
+    <!-- </div> -->
     <script src="script.js"></script>
 </body>
 </html>
